k8s/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-management
  labels:
    app: tenant-management
    environment: local
