k8s/exported-destinationrules.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"DestinationRule","metadata":{"annotations":{},"name":"backend-dr","namespace":"tenant-management"},"spec":{"host":"backend-service","trafficPolicy":{"connectionPool":{"http":{"http1MaxPendingRequests":50,"http2MaxRequests":100,"maxRequestsPerConnection":2},"tcp":{"maxConnections":100}},"loadBalancer":{"simple":"LEAST_REQUEST"},"outlierDetection":{"baseEjectionTime":"30s","consecutiveErrors":3,"interval":"30s","maxEjectionPercent":50}}}}
    creationTimestamp: "2026-01-01T16:14:38Z"
    generation: 2
    name: backend-dr
    namespace: tenant-management
    resourceVersion: "191286979"
    uid: 7613b3f9-550d-4fc4-9533-c38480523d06
  spec:
    host: backend-service
    trafficPolicy:
      connectionPool:
        http:
          http1MaxPendingRequests: 50
          http2MaxRequests: 100
          maxRequestsPerConnection: 2
        tcp:
          maxConnections: 100
      loadBalancer:
        simple: LEAST_REQUEST
      outlierDetection:
        baseEjectionTime: 30s
        consecutiveErrors: 3
        interval: 30s
        maxEjectionPercent: 50
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"DestinationRule","metadata":{"annotations":{},"name":"frontend-dr","namespace":"tenant-management"},"spec":{"host":"frontend-service","trafficPolicy":{"connectionPool":{"http":{"http1MaxPendingRequests":25,"http2MaxRequests":50},"tcp":{"maxConnections":50}},"loadBalancer":{"simple":"ROUND_ROBIN"}}}}
    creationTimestamp: "2026-01-01T16:14:38Z"
    generation: 2
    name: frontend-dr
    namespace: tenant-management
    resourceVersion: "191286983"
    uid: 24502678-05ce-4bef-9084-241209499f1e
  spec:
    host: frontend-service
    trafficPolicy:
      connectionPool:
        http:
          http1MaxPendingRequests: 25
          http2MaxRequests: 50
        tcp:
          maxConnections: 50
      loadBalancer:
        simple: ROUND_ROBIN
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"DestinationRule","metadata":{"annotations":{},"name":"keycloak","namespace":"tenant-management"},"spec":{"host":"keycloak","trafficPolicy":{"connectionPool":{"http":{"http1MaxPendingRequests":50,"http2MaxRequests":100,"maxRequestsPerConnection":2},"tcp":{"maxConnections":100}},"loadBalancer":{"simple":"ROUND_ROBIN"}}}}
    creationTimestamp: "2026-01-03T06:52:36Z"
    generation: 2
    name: keycloak
    namespace: tenant-management
    resourceVersion: "192597785"
    uid: 5b315eda-4413-4cca-ad6a-3829de0e5445
  spec:
    host: keycloak
    trafficPolicy:
      connectionPool:
        http:
          http1MaxPendingRequests: 50
          http2MaxRequests: 100
          maxRequestsPerConnection: 2
        tcp:
          maxConnections: 100
      loadBalancer:
        simple: ROUND_ROBIN
kind: List
metadata:
  resourceVersion: ""
